# asimpletest

./: CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: ci.yml
include/asimpletest/: lib.h
source/: lib.cpp
testing/: CMakeLists.txt
testing/example/: Test.cpp
testing/include/testing/: Test.h  config.h  rti.h
testing/source/: Test.cpp
tests/: test1.cpp  test2.cpp
